First stable version

--- a/robotiq_85_simulation/robotiq_85_gazebo/controller/gripper_controller_robotiq.yaml
+++ b/robotiq_85_simulation/robotiq_85_gazebo/controller/gripper_controller_robotiq.yaml
@@ -1,11 +1,28 @@
 gripper:
-  type: position_controllers/JointTrajectoryController
+  type: effort_controllers/JointTrajectoryController
   joints:
      - gripper_finger1_joint
+     - gripper_finger2_joint
+     - gripper_finger1_inner_knuckle_joint
+     - gripper_finger2_inner_knuckle_joint
+     - gripper_finger1_finger_tip_joint
+     - gripper_finger2_finger_tip_joint
   constraints:
       goal_time: 0.6
       stopped_velocity_tolerance: 0.05
       gripper_finger1_joint: {trajectory: 0.1, goal: 0.1}
+      gripper_finger2_joint: {trajectory: 0.1, goal: 0.1}
+      gripper_finger1_inner_knuckle_joint: {trajectory: 0.1, goal: 0.1}
+      gripper_finger2_inner_knuckle_joint: {trajectory: 0.1, goal: 0.1}
+      gripper_finger1_finger_tip_joint: {trajectory: 0.1, goal: 0.1}
+      gripper_finger2_finger_tip_joint: {trajectory: 0.1, goal: 0.1}
+  gains:
+      gripper_finger1_joint: {p: 20, i: 0, d: 0.01}
+      gripper_finger2_joint: {p: 20, i: 0, d: 0.01}
+      gripper_finger1_inner_knuckle_joint: {p: 20, i: 0, d: 0.01}
+      gripper_finger2_inner_knuckle_joint: {p: 20, i: 0, d: 0.01}
+      gripper_finger1_finger_tip_joint: {p: 5, i: 0, d: 0.001}
+      gripper_finger2_finger_tip_joint: {p: 5, i: 0, d: 0.001}
   stop_trajectory_duration: 0.5
   state_publish_rate:  25
   action_monitor_rate: 10
